# algorithms4

./: README.md  pom.xml
challanges/dcode_personal_mesage/: encrypted.txt
data/: sorted-ints.txt
data/my/: 10000-vertices-graph-for-critical-connections.txt  best-time-to-buy.large.txt  best-time-to-buy.medium.txt  g1.txt
doc/: DP.md
src/c/: .gitignore  CMakeLists.txt  README.md
src/c/array/: 2073_Time_Needed_to_Buy_Tickets.c
src/c/dp/: 1137_Nth_Tribonacci.c  343_Integer_Break.c
src/c/graph/: 417_Pacific_Atlantic_Water_Flow.c
src/c/hash_map/: 706_Design_HashMap.c
src/c/heap/: heap_min_int.c  heap_struct.c
src/c/leetcode/: 1915_Number_of_Wonderful_Substrings.c
src/c/lib/: json.c  json.h  test_json.c  utest.c  utest.h
src/c/linked_list/: 19_Remove_Nth_Node_From_End_of_List.c
src/c/queue/: 1700_number_of_studends_unable_to_eat_lunch.c  queue.c  queue_array.c
src/c/search/: binary_search.c
src/c/sliding/: 1297_Maximum_Number_of_Occurrences_of_a_Substring.c  1695_Maximum_Erasure_Value.c  2269_k_beauty_of_a_number.c  2379_minimum_recolors_wb.c  424_Longest_Repeating_Character_Replacement.c
src/c/sorting/: 315_count_of_smaller_numbers_after_self.c
src/c/string/: trie.c  uniq_letters_count.c
src/c/uf/: 1584_Min_Cost_to_Connect_All_Points.c  1905_Count_Sub_Islands.c  1971_find_existing_path.c  959_Regions_Cut_By_Slashes.c  uf.c
src/cpp/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  hello_cpp.cpp  hellocpp.cpp
src/cpp/dp/: 1395_Count_Number_of_Teams.cpp
src/cpp/graph/: 1334_Find_the_City_With_the_Smallest_Number_of_Neighbors_at_a_Threshold_Distance.cpp
src/cpp/sorting/: 912_Sort_an_Array.cpp
src/cpp/trees/: 433.Minimum_Genetic_Mutations.cpp
src/cpp/trees/kd/: kd_tree.cpp  kd_tree.h
src/cpp/uf/: UF.cpp  UF.hpp  uf_test.cpp
src/js/: README.md  jest.config.js  leetcode.js  package.json
src/js/LeetCode/: 1219_Path_with_Maximum_Gold.js  1219_Path_with_Maximum_Gold.test.js  2257_Count_Unguarded Cells_in_the_Grid.js  2257_Count_Unguarded Cells_in_the_Grid.test.js  273_Integer_to_English_Words.js  273_Integer_to_English_Words.test.js  3068_Find_the_Maximum_Sum_of_Node_Values.js  3068_Find_the_Maximum_Sum_of_Node_Values.test.js  310_Minimum_Height_Trees.js  310_Minimum_Height_Trees.test.js  40_Combination_Sum_II.js  40_Combination_Sum_II.test.js  70_Climbing_Stairs_helper.js  752_open_the_lock.js  752_open_the_lock.test.js  857_Minimum_Cost_to_Hire_K_Workers.js  857_Minimum_Cost_to_Hire_K_Workers.test.js  861_Score_After_Flipping_Matrix.js  861_Score_After_Flipping_Matrix.test.js  863_All_Nodes_Distance_K_in_BT.js  863_All_Nodes_Distance_K_in_BT.test.js  885_Spiral_Matrix_III.js  885_Spiral_Matrix_III.test.js
src/js/combinatorics/: 131_Palindrome_Partitioning.js  131_Palindrome_Partitioning.test.js  140_Word_Break_II.js  140_Word_Break_II.test.js  backtrack.js  backtrack.test.js  combinations.js  letter_case_permutations.js  permutations.js
src/js/dp/: 120_Triangle.js  198_house_robber.js  416_Partition_Equal_Subset_Sum.js  416_Partition_Equal_Subset_Sum.test.js  464_Can_I_Win.js  464_Can_I_Win.test.js  467_Unique_Substrings_in_Wraparound_String.js  467_Unique_Substrings_in_Wraparound_String.test.js  473_Matchsticks_to_Square.js  473_Matchsticks_to_Square.test.js  474_Ones_and_Zeroes.js  474_Ones_and_Zeroes.test.js  552_Student_Attendance_Record_II.js  552_Student_Attendance_Record_II.test.js
src/js/graph/: 1192_Critical_Connections.js  1192_Critical_Connections.test.js  127_Word_Ladder.js  127_Word_Ladder.test.js  1334_Find_the_City_With_the_Smallest_Number_of_Neighbors_at_a_Threshold_Distance.js  1334_Find_the_City_With_the_Smallest_Number_of_Neighbors_at_a_Threshold_Distance.test.js  1368_Minimum_Cost_to_Make_at_Least_One_Valid_Path_in_a_Grid.js  1368_Minimum_Cost_to_Make_at_Least_One_Valid_Path_in_a_Grid.test.js  1579_Remove_Max_Number_of_Edges_to_Keep_Graph_Fully_Traversable.js  1579_Remove_Max_Number_of_Edges_to_Keep_Graph_Fully_Traversable.test.js  2017_Grid_Game.js  2017_Grid_Game.test.js  2812_Find_the_Safest_Path_in_a_Grid.js  2812_Find_the_Safest_Path_in_a_Grid.test.js  433_Minimum_Genetic_Mutation.js  433_Minimum_Genetic_Mutation.test.js  847_Shortest_Path_Visiting_All_Nodes.bk.js  847_Shortest_Path_Visiting_All_Nodes.js  847_Shortest_Path_Visiting_All_Nodes.test.js  864_Shortest_Path_to_Get_All_Keys.js  864_Shortest_Path_to_Get_All_Keys.test.js  README.md  mst-debug.puml
src/js/queue/: 23_Merge_k_Sorted_Lists.js  23_Merge_k_Sorted_Lists.test.js  pq.js  pq.test.js  q.js
src/js/uf/: 1202_Smallest_String_With_Swaps.js  1202_Smallest_String_With_Swaps.test.js  695_Max_Area_of_Island.js  721_Accounts_Merge.js  README.md  uf.js  uf.test.js
src/js/utils/: arrayToLinkedList.js  btree.js  btree.test.js  uf.js  uf.test.js
src/main/java/: FixedSizeStack.java
src/main/java/demo/: BinarySearch.java  CounterDemo.java  Out.java  TestVisualAccumulator.java
src/main/java/graphs/dighraph/: DijkstraSP.java  DirectedEdge.java  EdgeWeightedDigraph.java  SP.java
src/main/java/searching/: README.md  STBaseClient.java  STClient.java  STLinkedListClient.java  STOrderedClient.java
src/main/java/sorting/: InsertSorter.java  InsertionSorter.java  MergeDownstreamCopySorter.java  MergeDownstreamSorter.java  MergeUpSorter.java  MergeWithShellSorter.java  QuickSort.java  QuickWithShellSort.java  README.md  SelectionSorter.java  ShellSorter.java  SortCompare.java  Sorter.java
src/main/java/training/: CourseScheduler.java  HappyNumbers.java  LastStoneWeight.java  MaximalSquare.java  NumIslands.java  StockSpanner.java  StockSpannerArrays.java  UncrossedLines.java
src/main/java/uf/: BalancedQuickUnionUF.java  BasicUF.java  QuickUnionUF.java  README.md  UF.java  UFReader.java
src/main/java/utils/: Accumulator.java  VisualAccumulator.java
src/test/java/: BasicUFTest.java  FixedSizeStackTest.java  UFTest.java
src/test/java/training/: CourseSchedulerTests.java  MaximalSquareTests.java  NumIslandsTests.java  StockSpannerTests.java
src/test/java/uf/: BasicUFTest.java
tools/: jsonToCArray.js  puml.js  readlines.js
(+146 files in other folders)
